--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-opencv-python>=4.6.0.66
-numpy>=1.23.5
-tqdm>=4.63.1
-torch>=1.13.0
-natsort>=8.1.0
-typing>=3.7.4.3
-torchvision>=0.14.0
-scipy>=1.9.3
+basicsr>=1.4.2
+facexlib>=0.2.5
+lmdb
+numpy
+opencv-python
+pyyaml
+scipy
+tb-nightly
+torch>=1.7
+torchvision
+tqdm
+yapf
